[package]
name = "pia-wg-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "native-tls", "cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
wireguard-keys = "0.1.1"
